// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AvatarGroup > :props > :placement 1`] = `
<div>
  <div
    class="t-avatar-group t-avatar--offset-right"
    placement="bottom"
  >
    
    
    
    <div
      class="t-avatar t-avatar--circle"
    >
      <span>
        
        W
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle"
    >
      <span>
        
        W
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle t-avatar__collapse"
    >
      <span>
        
        +1
        
      </span>
    </div>
    
    
    
  </div>
</div>
`;

exports[`AvatarGroup > :props > :popupProps 1`] = `
<div>
  <div
    class="t-avatar-group t-avatar--offset-right"
  >
    
    
    
    <div
      class="t-avatar t-avatar--circle"
    >
      <span>
        
        W
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle"
    >
      <span>
        
        W
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle t-avatar__collapse"
    >
      <span>
        
        +1
        
      </span>
    </div>
    
    
    
  </div>
</div>
`;

exports[`avatarGroup > :props > :placement 1`] = `
<div>
  <div
    class="t-avatar-group t-avatar--offset-right"
    placement="bottom"
  >
    
    
    
    <!---->
    <!---->
    <div
      class="t-avatar t-avatar--circle t-avatar__collapse"
    >
      <span>
        
        +1
        
      </span>
    </div>
    
    
    
  </div>
</div>
`;

exports[`avatarGroup > :props > :popupProps 1`] = `
<div>
  <div
    class="t-avatar-group t-avatar--offset-right"
  >
    
    
    
    <!---->
    <!---->
    <div
      class="t-avatar t-avatar--circle t-avatar__collapse"
    >
      <span>
        
        +1
        
      </span>
    </div>
    
    
    
  </div>
</div>
`;
